--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/amiri": "^5.2.8",
     "@fontsource/libre-baskerville": "^5.2.10",
     "@types/canvas-confetti": "^1.9.0",
     "astro": "^5.16.6",
