--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,31 @@
-# build output
-dist/
-# generated types
-.astro/
-
-# dependencies
+# Dependencies
 node_modules/
 
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# Build output
+dist/
+.astro/
 
-
-# environment variables
+# Environment files
 .env
-.env.production
+.env.*
+!.env.example
 
-# macOS-specific files
-.DS_Store
+# Cloudflare
+.wrangler/
+.dev.vars
 
-# jetbrains setting folder
+# IDE
+.vscode/*
+!.vscode/extensions.json
 .idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Local development
+*.local
