--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "zaidandhaya"
+name = "wedding-rsvp"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
@@ -11,5 +11,6 @@ binding = "DB"
 database_name = "wedding-rsvp"
 database_id = "fffce60d-d8d4-4d20-96b5-b120693143f8"
 
+# Optional: Environment variables
 [vars]
 ENVIRONMENT = "production"
